--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sns</name>
+	<name>SNS_Project_JSP(10월18일-오후4시50분)</name>
 	<comment></comment>
 	<projects>
 	</projects>
